--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       POSTGRES_USER: navis
       POSTGRES_PASSWORD: navis
       POSTGRES_DB: navis
+      KMP_DUPLICATE_LIB_OK: "TRUE" 
     ports:
       - "5432:5432"
     volumes:
