feat: complete object detection, bookmarks, and smart search system
Core Features:
- Auto object detection with YOLOv8 on 1,500+ KITTI/Argoverse frames
- 5,969 objects detected: 5,270 cars, 351 people, 253 bicycles, 38 traffic lights, 36 trucks, 19 motorcycles, 2 dogs
- Smart semantic search with automatic keyword detection (car, person, truck, bicycle, motorcycle, traffic light)
- Adaptive search multipliers: 50x for rare objects, 10x for common objects
- Complete bookmark system with Supabase authentication and RLS policies
- AI-powered frame captions using BLIP-large (463MB model, 3-5s inference)

Backend Improvements:
- Google Drive file caching system (90%+ reduction in API calls)
- Exponential backoff retry logic with 5 attempts (1s, 2s, 4s, 8s, 16s)
- Fixed database path issues (added Residential/City prefixes, excluded drive_0001_sync)
- Updated search endpoint to filter by detected objects with confidence > 0.5
- Modified detect_objects.py script to skip frames without valid Google Drive paths

Frontend Enhancements:
- Staggered image loading (2s delays) to reduce concurrent API requests
- Auth-aware navigation (conditional UI based on user session)
- Smart 'Get Started' button (redirects to /signin or /header based on auth)
- Bookmark toggle with optimistic UI updates
- Bookmarks page with grid display and empty state handling
- Progressive caption generation (shows placeholder then updates)

Database Updates:
- Fixed 1,242 KITTI frame paths with proper folder structure
- Added scene_token filters to exclude missing sequences
- Updated database backup with object detection results

Deployment:
- Complete Docker setup with docker-compose.yml
- Database import script for teammates
- Environment variable configuration

Known Issues (Environmental):
- Google Drive SSL errors from rate limiting (mitigated with caching)
- Some frames missing from Google Drive (excluded from results)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-
-version: "3.9"
+version: '3.9'
 services:
   postgres:
     image: pgvector/pgvector:pg16
@@ -8,14 +7,14 @@ services:
       POSTGRES_USER: navis
       POSTGRES_PASSWORD: navis
       POSTGRES_DB: navis
-      KMP_DUPLICATE_LIB_OK: "TRUE" 
+      KMP_DUPLICATE_LIB_OK: 'TRUE'
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - ./pgdata:/var/lib/postgresql/data
       - ./init:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U navis -d navis"]
+      test: ['CMD-SHELL', 'pg_isready -U navis -d navis']
       interval: 5s
       timeout: 5s
       retries: 5
@@ -24,8 +23,6 @@ services:
     image: adminer:4
     container_name: navis-adminer
     ports:
-      - "8080:8080"
+      - '8080:8080'
     depends_on:
       - postgres
-      
-ENV KMP_DUPLICATE_LIB_OK=TRUE
